# mandelbroet

./: CMakeLists.txt  Colour.cpp  Colour.hpp  Fractal.cpp  Fractal.hpp  Input.cpp  Input.hpp  Performance_Counter.cpp  Performance_Counter.hpp  README.md  Renderer.cpp  Renderer.hpp  common.hpp  mandelbröt.cpp
